fixes icons on small screen

--- a/styles.css
+++ b/styles.css
@@ -303,6 +303,14 @@ border-color: var(--primary-color-light);
         display: flex;
     }
 }
+@media (max-width: 992px) {
+    .whatsapp-button,
+    .whatsapp-icon {
+        display: none !important;
+        visibility: hidden !important;
+        pointer-events: none !important;
+    }
+}
 
 .hero-section {
     display: flex; /* Keep flex display to center container2 */
